# docs/swagger.yaml
@@ -378,6 +378,14 @@ definitions:
           $ref: '#/definitions/structs.ClusterInfo'
         type: array
     type: object
+  cluster.RestartClusterResp:
+    properties:
+      clusterId:
+        type: string
+      workFlowId:
+        description: Asynchronous task workflow ID
+        type: string
+    type: object
   cluster.ResumeChangeFeedTaskResp:
     properties:
       status:
@@ -959,23 +967,6 @@ definitions:
       backupRecordId:
         type: integer
       sourceClusterId:
-        type: string
-    type: object
-  management.RestartClusterRsp:
-    properties:
-      clusterId:
-        type: string
-      createTime:
-        type: string
-      deleteTime:
-        type: string
-      inProcessFlowId:
-        type: integer
-      statusCode:
-        type: string
-      statusName:
-        type: string
-      updateTime:
         type: string
     type: object
   management.ServiceCapabilityIndex:
@@ -2625,7 +2616,7 @@ paths:
             - $ref: '#/definitions/controller.CommonResult'
             - properties:
                 data:
-                  $ref: '#/definitions/management.RestartClusterRsp'
+                  $ref: '#/definitions/cluster.RestartClusterResp'
               type: object
         "401":
           description: Unauthorized
